--- a/packages/reflecta-components/src/styles/_stylings.scss
+++ b/packages/reflecta-components/src/styles/_stylings.scss
@@ -1,18 +1,7 @@
 // Border Radiuses
-$border-radius-small: #{$planck-length /
-    2};
-$border-radius-medium: #{$planck-length};
-$border-radius-large: #{$planck-length *
-    2};
+$border-radius-small: calc($planck-length / 2);
+$border-radius-medium: $planck-length;
+$border-radius-large: calc($planck-length * 2);
 
 // Box Shadows
-$box-shadow-default: (
-        $planck-length /
-            2
-    )
-    (
-        $planck-length /
-            2
-    )
-    $planck-length
-    $color-neutral-300;
+$box-shadow-default: calc($planck-length / 2) calc($planck-length / 2) $planck-length $color-neutral-300;
