--- a/packages/reflecta-components/src/components/ModalComponent/styles.scss
+++ b/packages/reflecta-components/src/components/ModalComponent/styles.scss
@@ -2,32 +2,35 @@
 
 .ModalComponent {
     position: fixed;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
 
     width: 100vw;
     height: 100vh;
 
-    &__background{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width:100%;
-        height: 100%;
-        padding: $padding-medium;
+    &__background {
+        position: fixed;
+        top: 0;
+        left: 0;
+
+        width: 100vw;
+        height: 100vh;
 
         background-color: $color-neutral-500;
         cursor: pointer;
-        opacity: 0.7;
+        opacity: 0.8;
+    }
+
+    &__dialog-wrapper {
+        padding: $padding-medium;
     }
 
     &__dialog {
-        width: 100%;
-        max-width: calc($planck-length * 50);
+        position: relative;
+
         padding: $padding-medium;
 
         background-color: $color-neutral-100;
         border-radius: $border-radius-medium;
-        cursor: default;
     }
 }
