Updated component name.

--- a/packages/reflecta-components/src/components/StorybookStylerComponent/styles.scss
+++ b/packages/reflecta-components/src/components/StorybookStylerComponent/styles.scss
@@ -1,6 +1,6 @@
 @import '../../styles/styles';
 
-.StorybookStyler {
+.StorybookStylerComponent {
     min-height: 100vh;
     padding: $padding-medium;
 
