--- a/packages/reflecta-components/src/components/StorybookExampleComponent/styles.scss
+++ b/packages/reflecta-components/src/components/StorybookExampleComponent/styles.scss
@@ -1,24 +1,25 @@
 @import '../../styles/styles';
 
 .StorybookExampleComponent {
-    &__tab {
-        display: inline-block;
-        margin-bottom: -1px;
-        padding: $padding-small $padding-medium $padding-small;
-
-        font-size: $font-size-small;
-
-        background-color: $color-neutral-200;
-        border: solid 1px $color-neutral-300;
-        border-radius: $border-radius-small $border-radius-small 0 0;
-    }
-
     &__card {
-        padding: $padding-large $padding-medium;
+        padding: $padding-medium
+            $padding-medium
+            $padding-large;
 
         background-color: $color-neutral-100;
-        border: solid 1px $color-neutral-300;
-        border-radius: 0 $border-radius-small $border-radius-small $border-radius-small;
-        box-shadow: 1px 1px 2px $color-neutral-400;
+        box-shadow: 1px
+            1px
+            2px
+            $color-neutral-400;
+
+        &
+            > * {
+            margin-top: $margin-medium;
+            margin-right: $margin-medium;
+
+            &:last-of-type {
+                margin-right: 0;
+            }
+        }
     }
 }
