--- a/packages/reflecta-components/src/components/StorybookExampleComponent/styles.scss
+++ b/packages/reflecta-components/src/components/StorybookExampleComponent/styles.scss
@@ -7,6 +7,7 @@
             $padding-large;
 
         background-color: $color-neutral-100;
+        border-radius: $border-radius-small;
         box-shadow: 1px
             1px
             2px
