--- a/packages/reflecta-components/src/components/ModalComponent/styles.scss
+++ b/packages/reflecta-components/src/components/ModalComponent/styles.scss
@@ -22,17 +22,22 @@
         opacity: 0.8;
     }
 
+    &__dialog-wrapper {
+        display: flex;
+        align-items: center;
+    }
+
     &__dialog {
         position: relative;
 
         width: 100%;
+        margin-bottom: calc(
+            $planck-length *
+                10
+        );
         padding: $padding-medium;
 
         background-color: $color-neutral-100;
         border-radius: $border-radius-medium;
-
-        @media only screen and (min-width: $breakpoint-begin-medium) {
-            margin-top: 25vh;
-        }
     }
 }
