--- a/packages/reflecta-components/src/components/CardComponent/styles.scss
+++ b/packages/reflecta-components/src/components/CardComponent/styles.scss
@@ -1,6 +1,7 @@
 @import '../../styles/styles';
 
 .CardComponent {
+    height: 100%;
     padding: $padding-large;
 
     background-color: $color-neutral-100;
