--- a/packages/reflecta-components/src/components/NavigationBarComponent/styles.scss
+++ b/packages/reflecta-components/src/components/NavigationBarComponent/styles.scss
@@ -6,8 +6,7 @@
     left: 0;
 
     width: 100%;
-    padding: $padding-medium
-        $padding-large;
+    padding: $padding-medium $padding-large;
 
     background-color: $color-neutral-100;
 }
