--- a/packages/reflecta-components/src/styles/_fonts.scss
+++ b/packages/reflecta-components/src/styles/_fonts.scss
@@ -9,7 +9,5 @@ $font-size-regular: 18px;
 $font-size-large: 22px;
 
 // Font families for display and reading
-$font-family-default: 'Comfortaa',
-    sans-serif;
-$font-family-text-block: 'Cormorant',
-    serif;
+$font-family-default: 'Comfortaa', sans-serif;
+$font-family-text-block: 'Cormorant', serif;
