--- a/packages/reflecta-components/src/components/GridItemComponent/styles.scss
+++ b/packages/reflecta-components/src/components/GridItemComponent/styles.scss
@@ -10,10 +10,7 @@ $breakpoints: (
 .GridItemComponent {
     grid-column: span 12;
 
-
-
-    @each $breakpoint,
-    $breakpoint-value in $breakpoints {
+    @each $breakpoint, $breakpoint-value in $breakpoints {
         &__#{$breakpoint} {
             @for $column from 0 through 13 {
                 @media only screen and (min-width: $breakpoint-value) {
