--- a/packages/reflecta-components/src/components/StorybookExampleComponent/styles.scss
+++ b/packages/reflecta-components/src/components/StorybookExampleComponent/styles.scss
@@ -2,19 +2,13 @@
 
 .StorybookExampleComponent {
     &__card {
-        padding: $padding-medium
-            $padding-medium
-            $padding-large;
+        padding: $padding-medium $padding-medium $padding-large;
 
         background-color: $color-neutral-100;
         border-radius: $border-radius-small;
-        box-shadow: 1px
-            1px
-            2px
-            $color-neutral-400;
+        box-shadow: 1px 1px 2px $color-neutral-400;
 
-        &
-            > * {
+        & > * {
             margin-top: $margin-medium;
             margin-right: $margin-medium;
 
