Added popover component.

--- a/packages/reflecta-components/src/components/ButtonComponent/styles.scss
+++ b/packages/reflecta-components/src/components/ButtonComponent/styles.scss
@@ -12,18 +12,20 @@ $letter-spacing: 0.05em;
         outline-offset: 1px;
     }
 
-    &--primary {
-        height: calc($planck-length * 6);
-        padding: 0 $padding-medium;
+    &--primary,
+    &--secondary {
+        padding: calc($padding-small * 1.5) $padding-large;
 
-        color: $color-neutral-100;
         font-weight: bold;
-        font-size: $font-size-regular;
+        font-size: $font-size-small;
         font-family: $font-family-default;
         letter-spacing: $letter-spacing;
-        text-transform: uppercase;
 
-        border-radius: $border-radius-medium;
+        border-radius: $border-radius-small;
+    }
+
+    &--primary {
+        color: $color-neutral-100;
 
         &-color-primary {
             background-color: $color-primary-300;
@@ -37,72 +39,68 @@ $letter-spacing: 0.05em;
             background-color: $color-accent-300;
         }
 
+        &-color-success {
+            background-color: $color-success-300;
+        }
+
+        &-color-warning {
+            background-color: $color-warning-300;
+        }
+
+        &-color-danger {
+            background-color: $color-danger-300;
+        }
+
+        &-color-neutral {
+            background-color: $color-neutral-600;
+        }
+
         &-disabled {
-            &-color-primary {
-                background-color: $color-primary-100;
-            }
+            cursor: default;
 
-            &-color-secondary {
-                background-color: $color-secondary-200;
-            }
-
-            &-color-accent {
-                background-color: $color-accent-200;
-            }
+            opacity: 0.35;
         }
     }
 
     &--secondary {
-        height: calc($planck-length * 6);
-        padding: 0 $padding-medium;
-
-        color: $color-accent-300;
-        font-weight: bold;
-        font-size: $font-size-regular;
-        font-family: $font-family-default;
-        letter-spacing: $letter-spacing;
-        text-transform: uppercase;
+        color: $font-color-default;
 
         border-style: solid;
-        border-width: 3px;
+        border-width: 2px;
         border-radius: $border-radius-medium;
 
         &-color-primary {
-            color: $color-primary-300;
-
             border-color: $color-primary-300;
         }
 
         &-color-secondary {
-            color: $color-secondary-300;
-
             border-color: $color-secondary-300;
         }
 
         &-color-accent {
-            color: $color-accent-300;
-
             border-color: $color-accent-300;
         }
 
+        &-color-success {
+            border-color: $color-success-300;
+        }
+
+        &-color-warning {
+            border-color: $color-warning-300;
+        }
+
+        &-color-danger {
+            border-color: $color-danger-300;
+        }
+
+        &-color-neutral {
+            border-color: $color-neutral-600;
+        }
+
         &-disabled {
-            &-color-primary {
-                color: $color-primary-200;
+            cursor: default;
 
-                border-color: $color-primary-200;
-            }
-
-            &-color-secondary {
-                color: $color-secondary-200;
-
-                border-color: $color-secondary-200;
-            }
-
-            &-color-accent {
-                color: $color-accent-200;
-
-                border-color: $color-accent-200;
-            }
+            opacity: 0.35;
         }
     }
 
@@ -111,7 +109,11 @@ $letter-spacing: 0.05em;
 
         font-size: inherit;
         font-family: inherit;
-        text-decoration: underline;
+        text-decoration: none;
+
+        &-accented {
+            text-decoration: underline;
+        }
 
         &-color-primary {
             color: $color-primary-300;
@@ -123,6 +125,22 @@ $letter-spacing: 0.05em;
 
         &-color-accent {
             color: $color-accent-300;
+        }
+
+        &-color-success {
+            color: $color-success-300;
+        }
+
+        &-color-warning {
+            color: $color-warning-300;
+        }
+
+        &-color-danger {
+            color: $color-danger-300;
+        }
+
+        &-color-neutral {
+            color: $font-color-default;
         }
 
         &-disabled {
