--- a/packages/reflecta-components/src/components/JournalEntryDisplayComponent/styles.scss
+++ b/packages/reflecta-components/src/components/JournalEntryDisplayComponent/styles.scss
@@ -2,7 +2,7 @@
     p {
         overflow: hidden;
 
-        white-space: nowrap;
+        white-space: pre;
         text-overflow: ellipsis;
     }
 }
