--- a/packages/reflecta-components/src/styles/_fonts.scss
+++ b/packages/reflecta-components/src/styles/_fonts.scss
@@ -11,3 +11,6 @@ $font-size-large: 22px;
 // Font families for display and reading
 $font-family-default: 'Comfortaa', sans-serif;
 $font-family-text-block: 'Cormorant', serif;
+
+// Default font color
+$font-color-default: $color-neutral-500;
