--- a/packages/reflecta-components/src/styles/styles.scss
+++ b/packages/reflecta-components/src/styles/styles.scss
@@ -11,7 +11,7 @@
 }
 
 body {
-    color: $color-neutral-600;
+    color: $font-color-default;
     font-weight: 500;
     font-size: 18px;
     font-family: $font-family-default;
