--- a/packages/reflecta-components/src/components/CardComponent/styles.scss
+++ b/packages/reflecta-components/src/components/CardComponent/styles.scss
@@ -2,7 +2,7 @@
 
 .CardComponent {
     height: 100%;
-    padding: $padding-large;
+    padding: $padding-medium;
 
     background-color: $color-neutral-100;
     border-radius: $border-radius-large;
