--- a/packages/reflecta-components/src/components/NavigationBarComponent/styles.scss
+++ b/packages/reflecta-components/src/components/NavigationBarComponent/styles.scss
@@ -4,6 +4,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    z-index: $z-index-navigation;
 
     width: 100%;
     padding: $padding-medium $padding-large;
