--- a/packages/reflecta-components/src/styles/_stylings.scss
+++ b/packages/reflecta-components/src/styles/_stylings.scss
@@ -6,3 +6,6 @@ $border-radius-large: calc($planck-length * 2);
 // Box Shadows
 $box-shadow-default: calc($planck-length / 2) calc($planck-length / 2) $planck-length $color-neutral-300;
 $box-shadow-dark: calc($planck-length / 2) calc($planck-length / 2) $planck-length calc($planck-length / 2) $color-neutral-400;
+
+// Opacities
+$opacity-disabled: 0.35;
