--- a/packages/reflecta-components/src/components/SearchComponent/styles.scss
+++ b/packages/reflecta-components/src/components/SearchComponent/styles.scss
@@ -19,10 +19,18 @@
 
     &__date-search-block {
         & > * {
-            margin-right: $margin-medium;
+            margin-bottom: $margin-medium;
 
             &:last-of-type {
                 margin-right: 0;
+            }
+
+            @media only screen and (min-width: $breakpoint-begin-medium) {
+                margin-right: $margin-medium;
+
+                &:last-of-type {
+                    margin-right: 0;
+                }
             }
         }
     }
